InterviewModel/src/main/java/InterviewModel.g4
grammar InterviewModel;

// PARSER RULES
start : template;

// CONSTITUTION OF THE SPECIFICATION
template : header requirements+;

// TEMPLATE HEADER COMPONENTS
header : interview_title_line date_line description_line email_line;

interview_title_line : INTERVIEW_TITLE DESCRIPTION_TEXT NEWLINE;
date_line : DATE_TITLE DATE NEWLINE;
description_line : ABOUT_TITLE DESCRIPTION_TEXT NEWLINE;
email_line : EMAIL_TITLE (DESCRIPTION_TEXT | DIGITO)+ NEWLINE;

// REQUIREMENTS
requirements: REQUIREMENT DIGITO+ NEWLINE requirement+ ;
requirement :
    ( true_false_question
    | short_answer_question
    | single_choice_question
    | multiple_choice_question
    | integer_question
    | decimal_question
    | date_question
    | time_question
    | numeric_scale_question ) +
    ;

// QUESTION TYPES
true_false_question : TRUE_FALSE_QUESTION DESCRIPTION_TEXT option+ NEWLINE ANSWER CHOICE_ANSWER NEWLINE;
short_answer_question : SHORT_ANSWER_QUESTION DESCRIPTION_TEXT NEWLINE ANSWER DESCRIPTION_TEXT NEWLINE;
single_choice_question : SINGLE_CHOICE_QUESTION DESCRIPTION_TEXT option+ NEWLINE ANSWER CHOICE_ANSWER NEWLINE;
multiple_choice_question : MULTIPLE_CHOICE_QUESTION DESCRIPTION_TEXT option+ NEWLINE ANSWER CHOICE_ANSWER NEWLINE;
integer_question : INTEGER_QUESTION DESCRIPTION_TEXT NEWLINE ANSWER ( INTEIRO | DIGITO ) NEWLINE;
decimal_question : DECIMAL_QUESTION DESCRIPTION_TEXT NEWLINE ANSWER DECIMAL NEWLINE;
date_question : DATE_QUESTION DESCRIPTION_TEXT NEWLINE ANSWER DATE NEWLINE;
time_question : TIME_QUESTION DESCRIPTION_TEXT NEWLINE ANSWER TIME NEWLINE;
numeric_scale_question : NUMERIC_SCALE_QUESTION (DESCRIPTION_TEXT | INTEIRO | DIGITO)+ NEWLINE ANSWER DIGITO NEWLINE;

option: NEWLINE DESCRIPTION_TEXT;

// LEXER RULES
INTERVIEW_TITLE : 'INTERVIEW: ';
DATE_TITLE : 'DATE: ';
ABOUT_TITLE : 'ABOUT: ';
EMAIL_TITLE : 'EMAIL: ';
REQUIREMENT: 'REQUIREMENT ';
ANSWER: 'ANSWER: ';


TRUE_FALSE_QUESTION : 'T_F_QUESTION:';
SHORT_ANSWER_QUESTION : 'SHORT_ANSWER_QUESTION:';
SINGLE_CHOICE_QUESTION : 'SINGLE_CHOICE_QUESTION:';
MULTIPLE_CHOICE_QUESTION : 'MULTIPLE_CHOICE_QUESTION:';
INTEGER_QUESTION : 'INTEGER_QUESTION:';
DECIMAL_QUESTION : 'DECIMAL_QUESTION:';
DATE_QUESTION : 'DATE_QUESTION:';
TIME_QUESTION : 'TIME_QUESTION:';
NUMERIC_SCALE_QUESTION : 'NUMERIC_SCALE_QUESTION:';

HIFEN : '-';

DIGITO : [0-9]+;

INTEIRO : DIGITO+;

DATE : DIA HIFEN MES HIFEN ANO;
DIA : DIGITO DIGITO;
MES : DIGITO DIGITO;
ANO : DIGITO DIGITO DIGITO DIGITO;

DECIMAL : DIGITO+ '.' DIGITO+;
TIME : DIGITO+ ':' DIGITO+ ':' DIGITO+;

CHOICE_ANSWER: [a-d ),]+;
NEWLINE: [\r\n]+;
DESCRIPTION_TEXT : [a-zA-Z .?,()-+#@]+;
