InterviewModel/src/main/java/GeneratedClasses/InterviewModelParser.java
package GeneratedClasses;// Generated from /Users/pedrom2004_/Desktop/sem4pi-23-24-2dh2/InterviewModel/src/main/java/InterviewModel.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class InterviewModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTERVIEW_TITLE=1, DATE_TITLE=2, ABOUT_TITLE=3, EMAIL_TITLE=4, REQUIREMENT=5, 
		ANSWER=6, TRUE_FALSE_QUESTION=7, SHORT_ANSWER_QUESTION=8, SINGLE_CHOICE_QUESTION=9, 
		MULTIPLE_CHOICE_QUESTION=10, INTEGER_QUESTION=11, DECIMAL_QUESTION=12, 
		DATE_QUESTION=13, TIME_QUESTION=14, NUMERIC_SCALE_QUESTION=15, HIFEN=16, 
		DIGITO=17, INTEIRO=18, DATE=19, DIA=20, MES=21, ANO=22, DECIMAL=23, TIME=24, 
		CHOICE_ANSWER=25, NEWLINE=26, DESCRIPTION_TEXT=27;
	public static final int
		RULE_start = 0, RULE_template = 1, RULE_header = 2, RULE_interview_title_line = 3, 
		RULE_date_line = 4, RULE_description_line = 5, RULE_email_line = 6, RULE_requirements = 7, 
		RULE_requirement = 8, RULE_true_false_question = 9, RULE_short_answer_question = 10, 
		RULE_single_choice_question = 11, RULE_multiple_choice_question = 12, 
		RULE_integer_question = 13, RULE_decimal_question = 14, RULE_date_question = 15, 
		RULE_time_question = 16, RULE_numeric_scale_question = 17, RULE_option = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "template", "header", "interview_title_line", "date_line", "description_line", 
			"email_line", "requirements", "requirement", "true_false_question", "short_answer_question", 
			"single_choice_question", "multiple_choice_question", "integer_question", 
			"decimal_question", "date_question", "time_question", "numeric_scale_question", 
			"option"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'INTERVIEW: '", "'DATE: '", "'ABOUT: '", "'EMAIL: '", "'REQUIREMENT '", 
			"'ANSWER: '", "'T_F_QUESTION:'", "'SHORT_ANSWER_QUESTION:'", "'SINGLE_CHOICE_QUESTION:'", 
			"'MULTIPLE_CHOICE_QUESTION:'", "'INTEGER_QUESTION:'", "'DECIMAL_QUESTION:'", 
			"'DATE_QUESTION:'", "'TIME_QUESTION:'", "'NUMERIC_SCALE_QUESTION:'", 
			"'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTERVIEW_TITLE", "DATE_TITLE", "ABOUT_TITLE", "EMAIL_TITLE", 
			"REQUIREMENT", "ANSWER", "TRUE_FALSE_QUESTION", "SHORT_ANSWER_QUESTION", 
			"SINGLE_CHOICE_QUESTION", "MULTIPLE_CHOICE_QUESTION", "INTEGER_QUESTION", 
			"DECIMAL_QUESTION", "DATE_QUESTION", "TIME_QUESTION", "NUMERIC_SCALE_QUESTION", 
			"HIFEN", "DIGITO", "INTEIRO", "DATE", "DIA", "MES", "ANO", "DECIMAL", 
			"TIME", "CHOICE_ANSWER", "NEWLINE", "DESCRIPTION_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "InterviewModel.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InterviewModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public TemplateContext template() {
			return getRuleContext(TemplateContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			template();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<RequirementsContext> requirements() {
			return getRuleContexts(RequirementsContext.class);
		}
		public RequirementsContext requirements(int i) {
			return getRuleContext(RequirementsContext.class,i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			header();
			setState(42); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(41);
				requirements();
				}
				}
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==REQUIREMENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public Interview_title_lineContext interview_title_line() {
			return getRuleContext(Interview_title_lineContext.class,0);
		}
		public Date_lineContext date_line() {
			return getRuleContext(Date_lineContext.class,0);
		}
		public Description_lineContext description_line() {
			return getRuleContext(Description_lineContext.class,0);
		}
		public Email_lineContext email_line() {
			return getRuleContext(Email_lineContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			interview_title_line();
			setState(47);
			date_line();
			setState(48);
			description_line();
			setState(49);
			email_line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Interview_title_lineContext extends ParserRuleContext {
		public TerminalNode INTERVIEW_TITLE() { return getToken(InterviewModelParser.INTERVIEW_TITLE, 0); }
		public TerminalNode DESCRIPTION_TEXT() { return getToken(InterviewModelParser.DESCRIPTION_TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(InterviewModelParser.NEWLINE, 0); }
		public Interview_title_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interview_title_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterInterview_title_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitInterview_title_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitInterview_title_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interview_title_lineContext interview_title_line() throws RecognitionException {
		Interview_title_lineContext _localctx = new Interview_title_lineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_interview_title_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(INTERVIEW_TITLE);
			setState(52);
			match(DESCRIPTION_TEXT);
			setState(53);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Date_lineContext extends ParserRuleContext {
		public TerminalNode DATE_TITLE() { return getToken(InterviewModelParser.DATE_TITLE, 0); }
		public TerminalNode DATE() { return getToken(InterviewModelParser.DATE, 0); }
		public TerminalNode NEWLINE() { return getToken(InterviewModelParser.NEWLINE, 0); }
		public Date_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterDate_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitDate_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitDate_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Date_lineContext date_line() throws RecognitionException {
		Date_lineContext _localctx = new Date_lineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_date_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(DATE_TITLE);
			setState(56);
			match(DATE);
			setState(57);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Description_lineContext extends ParserRuleContext {
		public TerminalNode ABOUT_TITLE() { return getToken(InterviewModelParser.ABOUT_TITLE, 0); }
		public TerminalNode DESCRIPTION_TEXT() { return getToken(InterviewModelParser.DESCRIPTION_TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(InterviewModelParser.NEWLINE, 0); }
		public Description_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterDescription_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitDescription_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitDescription_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Description_lineContext description_line() throws RecognitionException {
		Description_lineContext _localctx = new Description_lineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_description_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(ABOUT_TITLE);
			setState(60);
			match(DESCRIPTION_TEXT);
			setState(61);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Email_lineContext extends ParserRuleContext {
		public TerminalNode EMAIL_TITLE() { return getToken(InterviewModelParser.EMAIL_TITLE, 0); }
		public TerminalNode NEWLINE() { return getToken(InterviewModelParser.NEWLINE, 0); }
		public List<TerminalNode> DESCRIPTION_TEXT() { return getTokens(InterviewModelParser.DESCRIPTION_TEXT); }
		public TerminalNode DESCRIPTION_TEXT(int i) {
			return getToken(InterviewModelParser.DESCRIPTION_TEXT, i);
		}
		public List<TerminalNode> DIGITO() { return getTokens(InterviewModelParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(InterviewModelParser.DIGITO, i);
		}
		public Email_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_email_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterEmail_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitEmail_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitEmail_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Email_lineContext email_line() throws RecognitionException {
		Email_lineContext _localctx = new Email_lineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_email_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(EMAIL_TITLE);
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				_la = _input.LA(1);
				if ( !(_la==DIGITO || _la==DESCRIPTION_TEXT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGITO || _la==DESCRIPTION_TEXT );
			setState(69);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementsContext extends ParserRuleContext {
		public TerminalNode REQUIREMENT() { return getToken(InterviewModelParser.REQUIREMENT, 0); }
		public TerminalNode NEWLINE() { return getToken(InterviewModelParser.NEWLINE, 0); }
		public List<TerminalNode> DIGITO() { return getTokens(InterviewModelParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(InterviewModelParser.DIGITO, i);
		}
		public List<RequirementContext> requirement() {
			return getRuleContexts(RequirementContext.class);
		}
		public RequirementContext requirement(int i) {
			return getRuleContext(RequirementContext.class,i);
		}
		public RequirementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterRequirements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitRequirements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitRequirements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementsContext requirements() throws RecognitionException {
		RequirementsContext _localctx = new RequirementsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_requirements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(REQUIREMENT);
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				match(DIGITO);
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGITO );
			setState(77);
			match(NEWLINE);
			setState(79); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(78);
				requirement();
				}
				}
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 65408L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementContext extends ParserRuleContext {
		public List<True_false_questionContext> true_false_question() {
			return getRuleContexts(True_false_questionContext.class);
		}
		public True_false_questionContext true_false_question(int i) {
			return getRuleContext(True_false_questionContext.class,i);
		}
		public List<Short_answer_questionContext> short_answer_question() {
			return getRuleContexts(Short_answer_questionContext.class);
		}
		public Short_answer_questionContext short_answer_question(int i) {
			return getRuleContext(Short_answer_questionContext.class,i);
		}
		public List<Single_choice_questionContext> single_choice_question() {
			return getRuleContexts(Single_choice_questionContext.class);
		}
		public Single_choice_questionContext single_choice_question(int i) {
			return getRuleContext(Single_choice_questionContext.class,i);
		}
		public List<Multiple_choice_questionContext> multiple_choice_question() {
			return getRuleContexts(Multiple_choice_questionContext.class);
		}
		public Multiple_choice_questionContext multiple_choice_question(int i) {
			return getRuleContext(Multiple_choice_questionContext.class,i);
		}
		public List<Integer_questionContext> integer_question() {
			return getRuleContexts(Integer_questionContext.class);
		}
		public Integer_questionContext integer_question(int i) {
			return getRuleContext(Integer_questionContext.class,i);
		}
		public List<Decimal_questionContext> decimal_question() {
			return getRuleContexts(Decimal_questionContext.class);
		}
		public Decimal_questionContext decimal_question(int i) {
			return getRuleContext(Decimal_questionContext.class,i);
		}
		public List<Date_questionContext> date_question() {
			return getRuleContexts(Date_questionContext.class);
		}
		public Date_questionContext date_question(int i) {
			return getRuleContext(Date_questionContext.class,i);
		}
		public List<Time_questionContext> time_question() {
			return getRuleContexts(Time_questionContext.class);
		}
		public Time_questionContext time_question(int i) {
			return getRuleContext(Time_questionContext.class,i);
		}
		public List<Numeric_scale_questionContext> numeric_scale_question() {
			return getRuleContexts(Numeric_scale_questionContext.class);
		}
		public Numeric_scale_questionContext numeric_scale_question(int i) {
			return getRuleContext(Numeric_scale_questionContext.class,i);
		}
		public RequirementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterRequirement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitRequirement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitRequirement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementContext requirement() throws RecognitionException {
		RequirementContext _localctx = new RequirementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_requirement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(92);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case TRUE_FALSE_QUESTION:
						{
						setState(83);
						true_false_question();
						}
						break;
					case SHORT_ANSWER_QUESTION:
						{
						setState(84);
						short_answer_question();
						}
						break;
					case SINGLE_CHOICE_QUESTION:
						{
						setState(85);
						single_choice_question();
						}
						break;
					case MULTIPLE_CHOICE_QUESTION:
						{
						setState(86);
						multiple_choice_question();
						}
						break;
					case INTEGER_QUESTION:
						{
						setState(87);
						integer_question();
						}
						break;
					case DECIMAL_QUESTION:
						{
						setState(88);
						decimal_question();
						}
						break;
					case DATE_QUESTION:
						{
						setState(89);
						date_question();
						}
						break;
					case TIME_QUESTION:
						{
						setState(90);
						time_question();
						}
						break;
					case NUMERIC_SCALE_QUESTION:
						{
						setState(91);
						numeric_scale_question();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(94); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class True_false_questionContext extends ParserRuleContext {
		public TerminalNode TRUE_FALSE_QUESTION() { return getToken(InterviewModelParser.TRUE_FALSE_QUESTION, 0); }
		public TerminalNode DESCRIPTION_TEXT() { return getToken(InterviewModelParser.DESCRIPTION_TEXT, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(InterviewModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(InterviewModelParser.NEWLINE, i);
		}
		public TerminalNode ANSWER() { return getToken(InterviewModelParser.ANSWER, 0); }
		public TerminalNode CHOICE_ANSWER() { return getToken(InterviewModelParser.CHOICE_ANSWER, 0); }
		public List<OptionContext> option() {
			return getRuleContexts(OptionContext.class);
		}
		public OptionContext option(int i) {
			return getRuleContext(OptionContext.class,i);
		}
		public True_false_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_true_false_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).enterTrue_false_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelListener ) ((InterviewModelListener)listener).exitTrue_false_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelVisitor ) return ((InterviewModelVisitor<? extends T>)visitor).visitTrue_false_question(this);
			else return visitor.visitChildren(this);
		}
	}

	public final True_false_questionContext true_false_question() throws RecognitionException {
		True_false_questionContext _localctx = new True_false_questionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_true_false_question);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(TRUE_FALSE_QUESTION);
			setState(97);
			match(DESCRIPTION_TEXT);
			setState(99); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(98);
					option();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(101); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(103);
			match(NEWLINE);
			setState(104);
			match(ANSWER);
			setState(105);
			match(CHOICE_ANSWER);
			setState(106);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
